# wordplay

./: .dockerignore  .gitignore  CLAUDE.md  README.md  docker-compose.yml  fly.backend.toml  package-lock.json  package.json
.github/scripts/: cleanup-cf-pages.js  preview-comment.js
.github/workflows/: backend.yml  electric.yml  frontend.yml  (+1 more)
backend/: .env.example  .env.local.example  Cargo.toml  Dockerfile  build.rs  fly.toml  package.json  tsconfig.json
backend/engine-core/: Cargo.toml
backend/engine-core/src/: dictionary.rs  lib.rs  moves.rs  play_tests.rs  tiles.rs
backend/migrations/: 001_initial.sql  002_avatars.sql  003_friends.sql  004_push_subscriptions.sql  005_move_ratings.sql  006_nudges.sql
backend/src/: auth.rs  auth.ts  context.ts  db.ts  errors.ts  lib.rs  main.rs  main.ts  migrate.ts  models.rs  models.ts  push.ts  server.ts  util.ts
backend/src/engine/: board.rs  dictionary.rs  endgame.rs  mod.rs  moves.rs  play_tests.rs  scoring.rs
backend/src/handlers/: error.rs  games.rs  invites.rs  mod.rs  moves.rs  shape.rs  users.rs
backend/src/routes/: dictionary.ts  friends.ts  games.ts  health.ts  invites.ts  moves.ts  nudges.ts  push.ts  shape.ts  users.ts
backend/test/: api.test.ts  migrate.test.ts
backend/tests/: api.rs
backend/wasm-engine/: Cargo.toml
backend/wasm-engine/src/: lib.rs
electric/: fly.toml
frontend/: .env.example  .env.local.example  GLOSSARY.md  account-menu-harness.html  drag-harness.html  game-list-harness.html  header-harness.html  index.html  package-lock.json  package.json  seam-lab.html  tsconfig.json  vite.config.ts  zoom-harness.html
shared/: package.json  tsconfig.json
(+95 files in other folders)
