[package]
name = "wordplay-backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "wordplay-backend"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["cors"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
http = "1"
async-trait = "0.1"
jsonwebtoken = "9"
reqwest = { version = "0.12", features = ["json", "stream"] }
rand = "0.8"

[dev-dependencies]
rsa = { version = "0.9", features = ["pem"] }
base64 = "0.22"
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"
